--- a/index.html
+++ b/index.html
@@ -145,9 +145,68 @@
         </div>
     </div>
 </section>
-
-<section class="best_sellers"></section>
-
+<!----------------------------Serhii--------------------------------->
+<section class="best_sellers">
+    <div class="container">
+        <a href="#" class="sellers_btn">Best sellers</a>
+        <h3 class="sellers_description">
+            The most trusted products by our customers
+        </h3>
+        <div class="creme_main d-flex space-between">
+            <article class="creme_holder">
+                <img src="images/soft.png" alt="img">
+                <div class="creme_text d-flex space-between">
+                    <p class="">
+                        Clean
+                        <span class="creme_description">
+                            Lorem ipsum dolor sit amet
+                        </span>
+                    </p>
+                    <p class="creme_price">
+                        $ 32.00 USD
+                    </p>
+                </div>
+                <a href="#" class="product_details_btn">
+                    Product details
+                </a>
+            </article>
+            <article class="creme_holder">
+                <img src="images/soft.png" alt="img">
+                <div class="creme_text d-flex space-between">
+                    <p class="">
+                        Clean
+                        <span class="creme_description">
+                            Lorem ipsum dolor sit amet
+                        </span>
+                    </p>
+                    <p class="creme_price">
+                        $ 32.00 USD
+                    </p>
+                </div>
+                <a href="#" class="product_details_btn">
+                    Product details
+                </a>
+            </article>
+            <article class="creme_holder">
+                <img src="images/soft.png" alt="img">
+                <div class="creme_text d-flex space-between">
+                    <p class="">
+                        Clean
+                        <span class="creme_description">
+                            Lorem ipsum dolor sit amet
+                        </span>
+                    </p>
+                    <p class="creme_price">
+                        $ 32.00 USD
+                    </p>
+                </div>
+                <a href="#" class="product_details_btn">
+                    Product details
+                </a>
+            </article>
+        </div>
+    </div>
+</section>
 <section class="best_selling_big">
     <div class="best_selling_big_div">
         <article class="best_selling_big_article">
