best_sellers_corrected

--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
 <!----------------------------Serhii--------------------------------->
 <section class="best_sellers">
     <div class="container">
-        <a href="#" class="sellers_btn">Best sellers</a>
+        <h4 class="sellers">Best sellers</h4>
         <h3 class="sellers_description">
             The most trusted products by our customers
         </h3>
         <div class="creme_main d-flex space-between">
             <article class="creme_holder">
-                <img src="images/soft.png" alt="img">
+                <img src="images/clean.png" alt="img">
                 <div class="creme_text d-flex space-between">
                     <p class="">
                         Clean
@@ -171,16 +171,16 @@
                 </a>
             </article>
             <article class="creme_holder">
-                <img src="images/soft.png" alt="img">
+                <img src="images/tone.png" alt="img">
                 <div class="creme_text d-flex space-between">
                     <p class="">
-                        Clean
+                        Tone
                         <span class="creme_description">
                             Lorem ipsum dolor sit amet
                         </span>
                     </p>
                     <p class="creme_price">
-                        $ 32.00 USD
+                        $ 17.00 USD
                     </p>
                 </div>
                 <a href="#" class="product_details_btn">
@@ -191,13 +191,13 @@
                 <img src="images/soft.png" alt="img">
                 <div class="creme_text d-flex space-between">
                     <p class="">
-                        Clean
+                        Soft
                         <span class="creme_description">
                             Lorem ipsum dolor sit amet
                         </span>
                     </p>
                     <p class="creme_price">
-                        $ 32.00 USD
+                        $ 54.00 USD
                     </p>
                 </div>
                 <a href="#" class="product_details_btn">
