--- a/index.html
+++ b/index.html
@@ -255,7 +255,32 @@
         </div>
     </div>
 </section>
-<section class="collection"></section>
+<section class="collection">
+    <div class="container">
+        <article class="face_skin d-flex">
+            <img src="images/face_skin.jpg" alt="face_skin">
+            <div class="collection_size">
+                <h4>Smooth skin collection</h4>
+                <h3>For oily face skin</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit suspendisse Varius enim in eros elementum
+                    tristique, duis cursus mi quis viverra ornare, eros dolor interdum nulla ut commodo.</p>
+                <a href="#">Shop now</a>
+                <a href="#">Explore more</a>
+            </div>
+        </article>
+        <article class="body_skin d-flex">
+            <div class="collection_size">
+                <h4>Healthy tanning collection</h4>
+                <h3>For body skin</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit suspendisse Varius enim in eros elementum
+                    tristique, duis cursus mi quis viverra ornare, eros dolor interdum nulla ut commodo.</p>
+                <a href="#">Shop now</a>
+                <a href="#">Explore more</a>
+            </div>
+            <img src="images/body_skin.jpg" alt="body_skin">
+        </article>
+    </div>
+</section>
 <section class="testimonials">
     <div class="container">
         <h4>Testimonials</h4>
