--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <link rel="stylesheet" href="css/vlad27171.css">
     <link rel="stylesheet" href="css/ovrakhdima.css">
     <link rel="stylesheet" href="css/tubusovsergej.css">
-    <link rel="stylesheet" href="css/ablonskyi.developer.css">
     <link rel="stylesheet" href="css/markilchenko18.hillel.css">
     <link rel="stylesheet" href="css/w3zker.css">
     <link rel="stylesheet" href="css/mr.nerkararyna99.css">
@@ -28,6 +27,7 @@
     <link rel="stylesheet" href="css/tykhonova.o.o.css">
     <link rel="stylesheet" href="css/monei9888.css">
     <link rel="stylesheet" href="css/masha.titova32.css">
+    <link rel="stylesheet" href="css/ablonskyi.developer.css">
 </head>
 <body>
 <header>
@@ -493,6 +493,79 @@
     </div>
 </section>
 <footer>
+    <div class="container ">
+        <div class="upper_footer">
+            <div class="subscribe">
+                <div class="subscribe_form">
+                    <p>Join our newsletter to stay up to date on features and releases.</p>
+                    <form name="subscribe" action="#" method="post" class="d-flex space-between">
+                        <div class="email_input">
+                            <label for="email">Email</label>
+                            <input name="email" type="email" placeholder="" id="email">
+                        </div>
+                        <button type="submit" class="subscribe_button">
+                            Subscribe
+                        </button>
+                    </form>
+                </div>
+                <p class="privacy">By subscribing you agree to with our<span>Privacy Policy and provide consent to receive updates from our company.</span></p>
+            </div>
+            <div class="footer_nav">
+                <div class="footer_nav_pages footer_nav_links">
+                    <h6>Pages</h6>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">FAQs</a></li>
+                        <li><a href="#">Legal</a></li>
+                    </ul>
+                </div>
+                <div class="footer_nav_cms_pages footer_nav_links">
+                    <h6>CMS Pages</h6>
+                    <ul>
+                        <li><a href="#">Blog Post</a></li>
+                        <li><a href="#">Blog Categories</a></li>
+                        <li><a href="#">Product Page</a></li>
+                        <li><a href="#">Product Categories</a></li>
+                    </ul>
+                </div>
+                <div class="footer_nav_account_pages footer_nav_links">
+                    <h6>Account Pages</h6>
+                    <ul>
+                        <li><a href="#">Login</a></li>
+                        <li><a href="#">Sign Up</a></li>
+                        <li><a href="#">Forgot Password</a></li>
+                        <li><a href="#">Reset Password</a></li>
+                        <li><a href="#">Email Confirmation</a></li>
+                    </ul>
+                </div>
+                <div class="footer_nav_utility_pages footer_nav_links">
+                    <h6>Utility Pages</h6>
+                    <ul>
+                        <li><a href="#">Style Guide</a></li>
+                        <li><a href="#">Changelog</a></li>
+                        <li><a href="#">Licenses</a></li>
+                        <li><a href="#">404</a></li>
+                        <li><a href="#">Password</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="lower_footer">
+            <p>© Beautico by Minimal Square. Powered by Webflow.</p>
+            <div class="lower_foter_links">
+                <div class="social">
+                    <ul>
+                        <li><a href="#"><img src="images/fb.svg" alt="facebook"></a></li>
+                        <li><a href="#"><img src="images/inst.svg" alt="instagram"></a></li>
+                        <li><a href="#"><img src="images/twitter.svg" alt="twitter"></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
